--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="/usr/local/phonegap/Android/phonegap.0.9.6.jar"/>
+	<classpathentry kind="lib" path="lib/phonegap-nfc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
